EXTRA_DIST = \
	Maelstrom_Icon\#100.cicn \
	Maelstrom_Icon\#101.cicn \
	Maelstrom_Icon\#102.cicn \
	Maelstrom_Icon\#103.cicn \
	Maelstrom_Icon\#104.cicn \
	Maelstrom_Icon\#110.cicn \
	Maelstrom_Icon\#128.cicn \
	Maelstrom_Icon\#129.cicn \
	Maelstrom_Icon\#130.cicn \
	Maelstrom_Icon\#131.cicn \
	Maelstrom_Icon\#132.cicn \
	Maelstrom_Icon\#133.cicn \
	Maelstrom_Icon\#134.cicn \
	Maelstrom_Icon\#135.cicn \
	Maelstrom_Icon\#136.cicn \
	Maelstrom_Icon\#137.cicn \
	Maelstrom_Titles\#100.bmp \
	Maelstrom_Titles\#101.bmp \
	Maelstrom_Titles\#102.bmp \
	Maelstrom_Titles\#128.bmp \
	Maelstrom_Titles\#129.bmp \
	Maelstrom_Titles\#130.bmp \
	Maelstrom_Titles\#133.bmp \
	Maelstrom_Titles\#134.bmp \
	Maelstrom_Titles\#135.bmp \
	Maelstrom_Titles\#999.bmp
