
noinst_LIBRARIES = libgame.a

libgame_a_SOURCES =		\
	Localization.h		\
	MacDialog.cpp		\
	MacDialog.h		\
	Maelstrom.h		\
	MaelstromUI.cpp		\
	MaelstromUI.h		\
	Maelstrom_Globals.h	\
	ServiceManager.cpp	\
	ServiceManager.h	\
	about.cpp		\
	about.h			\
	colortable.h		\
	continue.cpp		\
	continue.h		\
	controls.cpp		\
	controls.h		\
	fastrand.cpp		\
	fastrand.h		\
	game.cpp		\
	game.h			\
	gameinfo.cpp		\
	gameinfo.h		\
	gameover.cpp		\
	gameover.h		\
	init.cpp		\
	init.h			\
	load.cpp		\
	load.h			\
	lobby.cpp		\
	lobby.h			\
	main.cpp		\
	main.h			\
	make.cpp		\
	make.h			\
	myerror.cpp		\
	myerror.h		\
	netplay.cpp		\
	netplay.h		\
	object.cpp		\
	object.h		\
	objects.cpp		\
	objects.h		\
	packet.h		\
	player.cpp		\
	player.h		\
	protocol.h		\
	rect.cpp		\
	rect.h			\
	replay.cpp		\
	replay.h		\
	scores.cpp		\
	scores.h		\
	store.cpp		\
	store.h			\
	shinobi.h
