
CFLAGS += -DPHYSFS_NO_CDROM_SUPPORT

noinst_LIBRARIES = libphysfs.a

libphysfs_a_SOURCES =		\
	archiver_dir.c		\
	archiver_zip.c		\
	physfs.c		\
	physfs.h		\
	physfs_byteorder.c	\
	physfs_casefolding.h	\
	physfs_internal.h	\
	physfs_miniz.h		\
	physfs_platforms.h	\
	physfs_unicode.c	\
	platform_beos.cpp	\
	platform_macosx.c	\
	platform_posix.c	\
	platform_unix.c		\
	platform_windows.c
