
noinst_LIBRARIES = libSDLscreen.a

libSDLscreen_a_SOURCES =	\
	SDL_FrameBuf.cpp	\
	SDL_FrameBuf.h		\
	UIArea.cpp		\
	UIArea.h		\
	UIBaseElement.cpp	\
	UIBaseElement.h		\
	UIContainer.cpp		\
	UIContainer.h		\
	UIDialog.cpp		\
	UIDialog.h		\
	UIDialogButton.cpp	\
	UIDialogButton.h	\
	UIDrawEngine.cpp	\
	UIDrawEngine.h		\
	UIElement.cpp		\
	UIElement.h		\
	UIElementButton.cpp	\
	UIElementButton.h	\
	UIElementCheckbox.cpp	\
	UIElementCheckbox.h	\
	UIElementDropdown.cpp	\
	UIElementDropdown.h	\
	UIElementEditbox.cpp	\
	UIElementEditbox.h	\
	UIElementRadio.cpp	\
	UIElementRadio.h	\
	UIElementThumbstick.cpp	\
	UIElementThumbstick.h	\
	UIFontInterface.h	\
	UIImageInterface.h	\
	UIManager.cpp		\
	UIManager.h		\
	UIPanel.cpp		\
	UIPanel.h		\
	UISoundInterface.h	\
	UITemplates.cpp		\
	UITemplates.h		\
	UITexture.cpp		\
	UITexture.h
